# internal/postgres/sqlc/models.go
@@ -12,13 +12,15 @@ import (
 )
 
 type Account struct {
-	ID        uuid.UUID
-	TenantID  uuid.UUID
-	Name      string
-	Type      string
-	Currency  string
-	CreatedAt time.Time
-	IsSystem  bool
+	ID         uuid.UUID
+	TenantID   uuid.UUID
+	Name       string
+	Type       string
+	Currency   string
+	CreatedAt  time.Time
+	IsSystem   bool
+	Status     string
+	MinBalance pgtype.Int8
 }
 
 type ApiKey struct {
